--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "esx-legacy-snippets",
-    "displayName": "ESX Snippets",
-    "description": "Snippet support for all ESX Legacy events and functions",
-    "version": "1.0.2",
-    "publisher": "xorzo",
-    "homepage": "https://github.com/xorzo1/esx_legacy_snippets",
+    "displayName": "Official ESX Snippets",
+    "description": "Official Snippet Extension for ESX Legacy",
+    "version": "2.0.0",
+    "publisher": "esx-framework",
+    "homepage": "https://github.com/esx-framework/esx-legacy-snippets",
     "icon": "assets/images/logo.jpg",
     "engines": {
         "vscode": "^1.68.0"
@@ -26,6 +26,10 @@
     },
     "keywords": [
         "ESX",
+        "fivem",
+        "lua",
+        "FiveM",
+        "official",
         "esx",
         "snippets",
         "ESX Snippets",
