refactor(package.json): replaced displayName

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "esx-legacy-snippets",
-    "displayName": "Official ESX Snippets",
+    "displayName": "Official ESX Snippets edited for RoadToSix",
     "description": "Official Snippet Extension for ESX Legacy",
     "version": "2.0.0",
     "publisher": "esx-framework",
